--- a/LiturgicalMusic.Repository/LiturgicalMusic.Repository.csproj
+++ b/LiturgicalMusic.Repository/LiturgicalMusic.Repository.csproj
@@ -42,6 +42,10 @@
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Ninject, Version=3.3.4.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
       <HintPath>..\packages\Ninject.3.3.4\lib\net45\Ninject.dll</HintPath>
       <Private>True</Private>
@@ -75,6 +79,10 @@
     <ProjectReference Include="..\LiturgicalMusic.Model.Common\LiturgicalMusic.Model.Common.csproj">
       <Project>{ea4e05f9-06d7-4b8a-8bd1-8b2ab36f9185}</Project>
       <Name>LiturgicalMusic.Model.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\LiturgicalMusic.Model\LiturgicalMusic.Model.csproj">
+      <Project>{b4376262-7454-429d-914f-98cfbcc93a24}</Project>
+      <Name>LiturgicalMusic.Model</Name>
     </ProjectReference>
     <ProjectReference Include="..\LiturgicalMusic.Repository.Common\LiturgicalMusic.Repository.Common.csproj">
       <Project>{3607313c-78b8-4b67-8df7-fd23a3f5725a}</Project>
