--- a/LiturgicalMusic.WebAPI/LiturgicalMusic.WebAPI.csproj
+++ b/LiturgicalMusic.WebAPI/LiturgicalMusic.WebAPI.csproj
@@ -170,6 +170,10 @@
     <Folder Include="src\app\assets\pdf\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\LiturgicalMusic.Common\LiturgicalMusic.Common.csproj">
+      <Project>{6041f2f9-6109-4a3f-a883-ef9881089f91}</Project>
+      <Name>LiturgicalMusic.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\LiturgicalMusic.Model.Common\LiturgicalMusic.Model.Common.csproj">
       <Project>{ea4e05f9-06d7-4b8a-8bd1-8b2ab36f9185}</Project>
       <Name>LiturgicalMusic.Model.Common</Name>
@@ -204,6 +208,7 @@
     <TypeScriptCompile Include="src\app\song\shared\composer.service.ts" />
     <TypeScriptCompile Include="src\app\song\shared\hymn\hymn.component.ts" />
     <TypeScriptCompile Include="src\app\song\shared\models\composer.model.ts" />
+    <TypeScriptCompile Include="src\app\song\shared\models\filter.model.ts" />
     <TypeScriptCompile Include="src\app\song\shared\models\instrumentalPart.model.ts" />
     <TypeScriptCompile Include="src\app\song\shared\models\song.model.ts" />
     <TypeScriptCompile Include="src\app\song\shared\models\stanza.model.ts" />
