--- a/LiturgicalMusic.Common/LiturgicalMusic.Common.csproj
+++ b/LiturgicalMusic.Common/LiturgicalMusic.Common.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3607313C-78B8-4B67-8DF7-FD23A3F5725A}</ProjectGuid>
+    <ProjectGuid>{6041F2F9-6109-4A3F-A883-EF9881089F91}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LiturgicalMusic.Repository.Common</RootNamespace>
-    <AssemblyName>LiturgicalMusic.Repository.Common</AssemblyName>
+    <RootNamespace>LiturgicalMusic.Common</RootNamespace>
+    <AssemblyName>LiturgicalMusic.Common</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,19 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IComposerRepository.cs" />
-    <Compile Include="ISongRepository.cs" />
+    <Compile Include="Filter.cs" />
+    <Compile Include="IFilter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\LiturgicalMusic.Common\LiturgicalMusic.Common.csproj">
-      <Project>{6041f2f9-6109-4a3f-a883-ef9881089f91}</Project>
-      <Name>LiturgicalMusic.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\LiturgicalMusic.Model.Common\LiturgicalMusic.Model.Common.csproj">
-      <Project>{ea4e05f9-06d7-4b8a-8bd1-8b2ab36f9185}</Project>
-      <Name>LiturgicalMusic.Model.Common</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
