--- a/LiturgicalMusic.Common/LiturgicalMusic.Common.csproj
+++ b/LiturgicalMusic.Common/LiturgicalMusic.Common.csproj
@@ -42,6 +42,8 @@
   <ItemGroup>
     <Compile Include="Filter.cs" />
     <Compile Include="IFilter.cs" />
+    <Compile Include="IOptions.cs" />
+    <Compile Include="Options.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
