--- a/LiturgicalMusic.DAL/LiturgicalMusic.DAL.csproj
+++ b/LiturgicalMusic.DAL/LiturgicalMusic.DAL.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Entities\StanzaEntity.cs" />
     <Compile Include="Entities\SongEntity.cs" />
     <Compile Include="Entities\ThemeEntity.cs" />
+    <Compile Include="IEntity.cs" />
     <Compile Include="Migrations\201807311017441_InitialCreate.cs" />
     <Compile Include="Migrations\201807311017441_InitialCreate.Designer.cs">
       <DependentUpon>201807311017441_InitialCreate.cs</DependentUpon>
