--- a/LiturgicalMusic.Common/LiturgicalMusic.Common.csproj
+++ b/LiturgicalMusic.Common/LiturgicalMusic.Common.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Filter.cs" />
+    <Compile Include="IEntity.cs" />
     <Compile Include="IFilter.cs" />
     <Compile Include="IOptions.cs" />
     <Compile Include="Options.cs" />
