--- a/LiturgicalMusic.DAL/LiturgicalMusic.DAL.csproj
+++ b/LiturgicalMusic.DAL/LiturgicalMusic.DAL.csproj
@@ -60,7 +60,6 @@
     <Compile Include="Entities\StanzaEntity.cs" />
     <Compile Include="Entities\SongEntity.cs" />
     <Compile Include="Entities\ThemeEntity.cs" />
-    <Compile Include="IEntity.cs" />
     <Compile Include="Migrations\201807311017441_InitialCreate.cs" />
     <Compile Include="Migrations\201807311017441_InitialCreate.Designer.cs">
       <DependentUpon>201807311017441_InitialCreate.cs</DependentUpon>
@@ -77,6 +76,12 @@
     <EmbeddedResource Include="Migrations\201807311017441_InitialCreate.resx">
       <DependentUpon>201807311017441_InitialCreate.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LiturgicalMusic.Common\LiturgicalMusic.Common.csproj">
+      <Project>{6041f2f9-6109-4a3f-a883-ef9881089f91}</Project>
+      <Name>LiturgicalMusic.Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
