--- a/LiturgicalMusic.Repository.Common/LiturgicalMusic.Repository.Common.csproj
+++ b/LiturgicalMusic.Repository.Common/LiturgicalMusic.Repository.Common.csproj
@@ -41,7 +41,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IComposerRepository.cs" />
+    <Compile Include="IGenericRepository.cs" />
+    <Compile Include="IInstrumentalPartRepository.cs" />
     <Compile Include="ISongRepository.cs" />
+    <Compile Include="IStanzaRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
