--- a/LiturgicalMusic.Repository/LiturgicalMusic.Repository.csproj
+++ b/LiturgicalMusic.Repository/LiturgicalMusic.Repository.csproj
@@ -68,13 +68,14 @@
   <ItemGroup>
     <Compile Include="ComposerRepository.cs" />
     <Compile Include="DIModule.cs" />
-    <Compile Include="GenericRepository.cs" />
+    <Compile Include="Repository.cs" />
     <Compile Include="InstrumentalPartRepository.cs" />
     <Compile Include="Lilypond.cs" />
     <Compile Include="SongHelper.cs" />
     <Compile Include="SongRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StanzaRepository.cs" />
+    <Compile Include="UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LiturgicalMusic.Common\LiturgicalMusic.Common.csproj">
