--- a/LiturgicalMusic.WebAPI/package.json
+++ b/LiturgicalMusic.WebAPI/package.json
@@ -34,6 +34,7 @@
     "@angular/router": "~4.3.4",
     "angular-in-memory-web-api": "~0.3.0",
     "core-js": "^2.4.1",
+    "ngx-pagination": "^3.1.1",
     "rxjs": "^5.4.2",
     "systemjs": "0.19.40",
     "zone.js": "^0.8.4"
