--- a/LiturgicalMusic.WebAPI/packages.config
+++ b/LiturgicalMusic.WebAPI/packages.config
@@ -2,10 +2,13 @@
 <packages>
   <package id="AutoMapper" version="7.0.1" targetFramework="net452" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
@@ -14,6 +17,10 @@
   <package id="Ninject.Web.Common" version="3.3.1" targetFramework="net452" />
   <package id="Ninject.Web.Common.WebHost" version="3.3.1" targetFramework="net452" />
   <package id="Ninject.Web.WebApi" version="3.3.0" targetFramework="net452" />
+  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net452" />
+  <package id="System.Linq.Queryable" version="4.3.0" targetFramework="net452" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net452" />
+  <package id="X.PagedList" version="7.5.0" targetFramework="net452" />
+  <package id="X.PagedList.Mvc" version="7.5.0" targetFramework="net452" />
 </packages>
