refactoring of generic repository and unit of work

--- a/LiturgicalMusic.Repository.Common/LiturgicalMusic.Repository.Common.csproj
+++ b/LiturgicalMusic.Repository.Common/LiturgicalMusic.Repository.Common.csproj
@@ -78,9 +78,9 @@
   <ItemGroup>
     <Compile Include="IComposerRepository.cs" />
     <Compile Include="IRepository.cs" />
-    <Compile Include="IInstrumentalPartRepository.cs" />
     <Compile Include="ISongRepository.cs" />
-    <Compile Include="IStanzaRepository.cs" />
+    <Compile Include="IUnitOfWork.cs" />
+    <Compile Include="IUnitOfWorkFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
