--- a/LiturgicalMusic.DAL/packages.config
+++ b/LiturgicalMusic.DAL/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Ninject" version="3.3.4" targetFramework="net452" />
+  <package id="Ninject.Web.Common" version="3.3.1" targetFramework="net452" />
+  <package id="WebActivatorEx" version="2.2.0" targetFramework="net452" />
 </packages>
