--- a/LiturgicalMusic.Model/LiturgicalMusic.Model.csproj
+++ b/LiturgicalMusic.Model/LiturgicalMusic.Model.csproj
@@ -38,6 +38,10 @@
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Ninject, Version=3.3.4.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <HintPath>..\packages\Ninject.3.3.4\lib\net45\Ninject.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
@@ -87,6 +91,7 @@
   <ItemGroup>
     <Compile Include="Code.cs" />
     <Compile Include="Composer.cs" />
+    <Compile Include="DIModule.cs" />
     <Compile Include="InstrumentalPart.cs" />
     <Compile Include="Mapping\ModelProfile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -108,6 +113,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
