--- a/LiturgicalMusic.Repository/packages.config
+++ b/LiturgicalMusic.Repository/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="7.0.1" targetFramework="net452" />
+  <package id="Castle.Core" version="4.2.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
@@ -8,6 +9,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
   <package id="Ninject" version="3.3.4" targetFramework="net452" />
+  <package id="Ninject.Extensions.Factory" version="3.3.2" targetFramework="net452" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net452" />
   <package id="System.Linq.Queryable" version="4.3.0" targetFramework="net452" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net452" />
