--- a/LiturgicalMusic.WebAPI/LiturgicalMusic.WebAPI.csproj
+++ b/LiturgicalMusic.WebAPI/LiturgicalMusic.WebAPI.csproj
@@ -160,12 +160,12 @@
     <Content Include="Global.asax" />
     <Content Include="src\app\home\home.component.html" />
     <Content Include="src\app\shared\navbar\navbar.component.html" />
-    <Content Include="src\app\song\shared\hymn\hymn.component.html" />
-    <Content Include="src\app\song\shared\song-data\song-data.component.html" />
-    <Content Include="src\app\song\song-create\song-create.component.html" />
-    <Content Include="src\app\song\song-search\song-search.component.html" />
-    <Content Include="src\app\song\song-update\song-update.component.html" />
-    <Content Include="src\app\song\song-view\song-view.component.html" />
+    <Content Include="src\app\song\views\hymn\hymn.component.html" />
+    <Content Include="src\app\song\views\song-data\song-data.component.html" />
+    <Content Include="src\app\song\views\song-create.component.html" />
+    <Content Include="src\app\song\views\song-search.component.html" />
+    <Content Include="src\app\song\views\song-edit.component.html" />
+    <Content Include="src\app\song\views\song-view.component.html" />
     <Content Include="src\favicon.ico" />
     <Content Include="src\index.html" />
     <Content Include="src\styles.css" />
@@ -237,23 +237,23 @@
     <TypeScriptCompile Include="src\app\app.module.ts" />
     <TypeScriptCompile Include="src\app\home\home.component.ts" />
     <TypeScriptCompile Include="src\app\shared\navbar\navbar.component.ts" />
-    <TypeScriptCompile Include="src\app\song\shared\composer.service.ts" />
-    <TypeScriptCompile Include="src\app\song\shared\hymn\hymn.component.ts" />
-    <TypeScriptCompile Include="src\app\song\shared\models\composer.model.ts" />
-    <TypeScriptCompile Include="src\app\song\shared\models\filter.model.ts" />
-    <TypeScriptCompile Include="src\app\song\shared\models\instrumentalPart.model.ts" />
-    <TypeScriptCompile Include="src\app\song\shared\models\song.model.ts" />
-    <TypeScriptCompile Include="src\app\song\shared\models\stanza.model.ts" />
-    <TypeScriptCompile Include="src\app\song\shared\composer-resolver.service.ts" />
-    <TypeScriptCompile Include="src\app\song\shared\song-data\song-data.component.ts" />
-    <TypeScriptCompile Include="src\app\song\shared\song-resolver.service.ts" />
-    <TypeScriptCompile Include="src\app\song\shared\song-route-activator.service.ts" />
-    <TypeScriptCompile Include="src\app\song\shared\song.service.ts" />
-    <TypeScriptCompile Include="src\app\song\song-create\song-create.component.ts" />
+    <TypeScriptCompile Include="src\app\song\services\composer.service.ts" />
+    <TypeScriptCompile Include="src\app\song\views\hymn\hymn.component.ts" />
+    <TypeScriptCompile Include="src\app\song\models\composer.model.ts" />
+    <TypeScriptCompile Include="src\app\song\models\filter.model.ts" />
+    <TypeScriptCompile Include="src\app\song\models\instrumentalPart.model.ts" />
+    <TypeScriptCompile Include="src\app\song\models\song.model.ts" />
+    <TypeScriptCompile Include="src\app\song\models\stanza.model.ts" />
+    <TypeScriptCompile Include="src\app\song\services\composer-resolver.service.ts" />
+    <TypeScriptCompile Include="src\app\song\views\song-data\song-data.component.ts" />
+    <TypeScriptCompile Include="src\app\song\services\song-resolver.service.ts" />
+    <TypeScriptCompile Include="src\app\song\services\song-route-activator.service.ts" />
+    <TypeScriptCompile Include="src\app\song\services\song.service.ts" />
+    <TypeScriptCompile Include="src\app\song\views\song-create.component.ts" />
     <TypeScriptCompile Include="src\app\song\song-routing.module.ts" />
-    <TypeScriptCompile Include="src\app\song\song-search\song-search.component.ts" />
-    <TypeScriptCompile Include="src\app\song\song-update\song-update.component.ts" />
-    <TypeScriptCompile Include="src\app\song\song-view\song-view.component.ts" />
+    <TypeScriptCompile Include="src\app\song\views\song-search.component.ts" />
+    <TypeScriptCompile Include="src\app\song\views\song-edit.component.ts" />
+    <TypeScriptCompile Include="src\app\song\views\song-view.component.ts" />
     <TypeScriptCompile Include="src\app\song\song.module.ts" />
     <TypeScriptCompile Include="src\main.ts" />
   </ItemGroup>
