added song edit component

--- a/LiturgicalMusic.WebAPI/LiturgicalMusic.WebAPI.csproj
+++ b/LiturgicalMusic.WebAPI/LiturgicalMusic.WebAPI.csproj
@@ -160,11 +160,9 @@
     <Content Include="Global.asax" />
     <Content Include="src\app\home\home.component.html" />
     <Content Include="src\app\shared\navbar\navbar.component.html" />
-    <Content Include="src\app\song\views\hymn\hymn.component.html" />
-    <Content Include="src\app\song\views\song-data\song-data.component.html" />
-    <Content Include="src\app\song\views\song-create.component.html" />
-    <Content Include="src\app\song\views\song-search.component.html" />
+    <Content Include="src\app\song\views\hymn-edit\hymn-edit.component.html" />
     <Content Include="src\app\song\views\song-edit.component.html" />
+    <Content Include="src\app\song\views\song-search.component.html" />
     <Content Include="src\app\song\views\song-view.component.html" />
     <Content Include="src\favicon.ico" />
     <Content Include="src\index.html" />
@@ -238,21 +236,20 @@
     <TypeScriptCompile Include="src\app\home\home.component.ts" />
     <TypeScriptCompile Include="src\app\shared\navbar\navbar.component.ts" />
     <TypeScriptCompile Include="src\app\song\services\composer.service.ts" />
-    <TypeScriptCompile Include="src\app\song\views\hymn\hymn.component.ts" />
+    <TypeScriptCompile Include="src\app\song\services\song-session.service.ts" />
+    <TypeScriptCompile Include="src\app\song\views\hymn-edit\hymn-edit.component.ts" />
     <TypeScriptCompile Include="src\app\song\models\composer.model.ts" />
     <TypeScriptCompile Include="src\app\song\models\filter.model.ts" />
     <TypeScriptCompile Include="src\app\song\models\instrumentalPart.model.ts" />
     <TypeScriptCompile Include="src\app\song\models\song.model.ts" />
     <TypeScriptCompile Include="src\app\song\models\stanza.model.ts" />
     <TypeScriptCompile Include="src\app\song\services\composer-resolver.service.ts" />
-    <TypeScriptCompile Include="src\app\song\views\song-data\song-data.component.ts" />
+    <TypeScriptCompile Include="src\app\song\views\song-edit.component.ts" />
     <TypeScriptCompile Include="src\app\song\services\song-resolver.service.ts" />
     <TypeScriptCompile Include="src\app\song\services\song-route-activator.service.ts" />
     <TypeScriptCompile Include="src\app\song\services\song.service.ts" />
-    <TypeScriptCompile Include="src\app\song\views\song-create.component.ts" />
     <TypeScriptCompile Include="src\app\song\song-routing.module.ts" />
     <TypeScriptCompile Include="src\app\song\views\song-search.component.ts" />
-    <TypeScriptCompile Include="src\app\song\views\song-edit.component.ts" />
     <TypeScriptCompile Include="src\app\song\views\song-view.component.ts" />
     <TypeScriptCompile Include="src\app\song\song.module.ts" />
     <TypeScriptCompile Include="src\main.ts" />
