--- a/LiturgicalMusic.WebAPI/LiturgicalMusic.WebAPI.csproj
+++ b/LiturgicalMusic.WebAPI/LiturgicalMusic.WebAPI.csproj
@@ -161,6 +161,7 @@
     <Content Include="src\app\home\home.component.html" />
     <Content Include="src\app\shared\navbar\navbar.component.html" />
     <Content Include="src\app\song\views\hymn\hymn-edit.component.html" />
+    <Content Include="src\app\song\views\psalm\psalm-edit.component.html" />
     <Content Include="src\app\song\views\song-edit.component.html" />
     <Content Include="src\app\song\views\song-search.component.html" />
     <Content Include="src\app\song\views\song-view.component.html" />
@@ -244,6 +245,7 @@
     <TypeScriptCompile Include="src\app\song\models\song.model.ts" />
     <TypeScriptCompile Include="src\app\song\models\stanza.model.ts" />
     <TypeScriptCompile Include="src\app\song\services\composer-resolver.service.ts" />
+    <TypeScriptCompile Include="src\app\song\views\psalm\psalm-edit.component.ts" />
     <TypeScriptCompile Include="src\app\song\views\song-edit.component.ts" />
     <TypeScriptCompile Include="src\app\song\services\song-resolver.service.ts" />
     <TypeScriptCompile Include="src\app\song\services\song-route-activator.service.ts" />
